# openlesson

./: .env.local.example  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
components/: ActiveProbe.tsx  AgenticModeSelect.tsx  AudioPlayer.tsx  AudioVisualizer.tsx  BottomTools.tsx  BrainStateBar.tsx  ChatPanel.tsx  CoachingMain.tsx  CodingTool.tsx  CommunityPlans.tsx  DataInputTool.tsx  DemoBanner.tsx  FAQ.tsx  FaceTracker.tsx  FeatureStatus.tsx  FeedbackPanel.tsx  Footer.tsx  HexPlanView.tsx  HowItWorks.tsx  LLMChat.tsx  LabsMasteryCheck.tsx  LanguageSwitcher.tsx  LeadCapture.tsx  LogsTool.tsx  MobileBlockScreen.tsx  MobilePlanTab.tsx  MobileProbesTab.tsx  MobileSessionView.tsx  MobileWhiteboardCanvas.tsx  ModelLoadingModal.tsx  MuseTemporalChart.tsx  Navbar.tsx  ObserverControls.tsx  PlanAnalytics.tsx  PlanChat.tsx  PlanFlow.tsx  PlanModeSelect.tsx  PlanView.tsx  PlanningView.tsx  PopOutBanner.tsx  (+20 more)
docs/: AGENTIC_API_V2.md  AGENTIC_API_V2_SPEC.md
lib/: ai-provider.ts  audio.ts  broadcast-sync.ts  i18n.tsx  labs-ai.ts  labs-classifier.ts  labs-feature-extractor.ts  labs-muse-manager.ts  labs-signal-quality.ts  local-context.ts  local-inference.ts  muse-athena.ts  openrouter-client.ts  openrouter.ts  partners.ts  plan-image.ts  plans.ts  prompts.ts  retry.ts  sandbox.ts  screen-capture.ts  sounds.ts  storage.ts  topics.ts  (+6 more)
public/hermes/open-lesson/: README.md  __init__.py  plugin.yaml  pyproject.toml  schemas.py  tools.py
public/hermes/open-lesson/skills/openlesson/: SKILL.md
(+227 files in other folders)
