[project]
name = "hermes-plugin-openlesson"
version = "2.0.0"
description = "openLesson tutoring platform plugin for Hermes Agent"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.entry-points."hermes_agent.plugins"]
openlesson = "hermes_plugin_openlesson"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
